verified code product search and checkout page

--- a/property/android.properties
+++ b/property/android.properties
@@ -1,5 +1,5 @@
 platform=android
-DeviceID=GUD3Y18C18002755
+DeviceID=emulator-5554
 Package=in.amazon.mShop.android.shopping
 AppPath=/build/Amazon.apk
 Activity=com.amazon.mShop.home.HomeActivity
